apps/changedetection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
spec:
  type: ClusterIP
  clusterIP: 10.43.100.24
  selector:
    app.kubernetes.io/name: changedetection
  ports:
    - port: 5000
      targetPort: 5000
